--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Laurent Aphecetche",
   "dependencies": {
     "gatsby": "^2.18.12",
+    "gatsby-background-image": "^0.9.13",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-manifest": "^2.2.31",
     "gatsby-plugin-offline": "^3.0.27",
@@ -17,6 +18,7 @@
     "gatsby-source-filesystem": "^2.1.40",
     "gatsby-transformer-remark": "^2.6.48",
     "gatsby-transformer-sharp": "^2.3.7",
+    "intersection-observer": "^0.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
