--- a/package.json
+++ b/package.json
@@ -26,6 +26,12 @@
     "toml": "^3.0.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.3",
+    "@storybook/addon-actions": "^5.3.9",
+    "@storybook/addon-links": "^5.3.9",
+    "@storybook/addons": "^5.3.9",
+    "@storybook/react": "^5.3.9",
+    "babel-loader": "^8.0.6",
     "env-cmd": "^10.0.1",
     "prettier": "^1.19.1",
     "to-markdown-cli": "^0.4.1"
@@ -41,7 +47,9 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "storybook": "NODE_ENV=production start-storybook -s ./public -p 6006",
+    "build-storybook": "NODE_ENV=production build-storybook -s ./public"
   },
   "repository": {
     "type": "git",
