--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "version": "0.1.0",
   "author": "Laurent Aphecetche",
   "dependencies": {
+    "@mdx-js/mdx": "^1.5.5",
+    "@mdx-js/react": "^1.5.5",
     "gatsby": "^2.18.12",
     "gatsby-background-image": "^0.9.13",
     "gatsby-image": "^2.2.34",
     "gatsby-plugin-lunr": "^1.5.2",
     "gatsby-plugin-manifest": "^2.2.31",
+    "gatsby-plugin-mdx": "^1.0.67",
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
