--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "storybook": "NODE_ENV=production start-storybook -s ./public -p 6006",
+    "storybook": "start-storybook -s ./public -p 6006",
     "build-storybook": "NODE_ENV=production build-storybook -s ./public"
   },
   "repository": {
