--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-plugin-offline": "^3.0.27",
     "gatsby-plugin-react-helmet": "^3.1.16",
     "gatsby-plugin-sharp": "^2.3.5",
+    "gatsby-plugin-typography": "^2.3.22",
     "gatsby-remark-images": "^3.1.42",
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-static-images": "^1.0.1",
@@ -27,8 +28,12 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-typography": "^0.16.19",
     "strip-markdown": "^3.1.1",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "typography": "^0.16.19",
+    "typography-theme-funston": "^0.16.19",
+    "typography-theme-moraga": "^0.16.19"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
