--- a/package.json
+++ b/package.json
@@ -38,9 +38,15 @@
     "strip-markdown": "^3.1.1",
     "toml": "^3.0.0",
     "typography": "^0.16.19",
+    "typography-theme-de-young": "^0.16.19",
+    "typography-theme-fairy-gates": "^0.16.19",
     "typography-theme-funston": "^0.16.19",
+    "typography-theme-lawton": "^0.16.19",
+    "typography-theme-lincoln": "^0.16.19",
     "typography-theme-moraga": "^0.16.19",
-    "typography-theme-sutro": "^0.16.19"
+    "typography-theme-stern-grove": "^0.16.19",
+    "typography-theme-sutro": "^0.16.19",
+    "typography-theme-twin-peaks": "^0.16.19"
   },
   "devDependencies": {
     "@babel/core": "^7.8.3",
@@ -53,7 +59,7 @@
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.0",
     "install": "^0.13.0",
-    "npm": "^6.14.5",
+    "npm": "^6.14.7",
     "prettier": "1.19.1",
     "to-markdown-cli": "^0.4.1"
   },
