Add Members component

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-static-images": "^1.0.1",
     "gatsby-source-filesystem": "^2.1.40",
-    "gatsby-transformer-remark": "^2.6.48",
     "gatsby-transformer-sharp": "^2.3.7",
     "intersection-observer": "^0.7.0",
     "ldapjs": "^2.1.1",
@@ -35,6 +34,7 @@
     "react-dom": "^16.12.0",
     "react-fetch-hook": "^1.7.2",
     "react-helmet": "^5.2.1",
+    "react-obfuscate": "^3.6.7",
     "react-typography": "^0.16.19",
     "strip-markdown": "^3.1.1",
     "toml": "^3.0.0",
