--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Laurent Aphecetche",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@mdx-js/mdx": "^1.5.5",
     "@mdx-js/react": "^1.5.5",
     "eslint-config-prettier": "^6.11.0",
@@ -23,6 +24,7 @@
     "gatsby-remark-relative-images": "^0.2.3",
     "gatsby-remark-static-images": "^1.0.1",
     "gatsby-source-filesystem": "^2.1.40",
+    "gatsby-theme-material-ui": "^1.0.13",
     "gatsby-transformer-sharp": "^2.3.7",
     "intersection-observer": "^0.7.0",
     "ldapjs": "^2.1.1",
