--- a/site/package.json
+++ b/site/package.json
@@ -5,47 +5,23 @@
   "version": "0.1.0",
   "author": "Laurent Aphecetche",
   "dependencies": {
-    "@mdx-js/mdx": "^1.5.5",
-    "@mdx-js/react": "^1.5.5",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "@mdx-js/mdx": "^1.6.16",
+    "@mdx-js/react": "^1.6.16",
     "gatsby": "^2.24.47",
-    "gatsby-background-image": "^0.9.13",
-    "gatsby-image": "^2.2.34",
-    "gatsby-link": "^2.4.13",
-    "gatsby-plugin-manifest": "^2.2.31",
-    "gatsby-plugin-mdx": "^1.0.67",
-    "gatsby-plugin-offline": "^3.0.27",
-    "gatsby-plugin-postcss": "^2.1.20",
-    "gatsby-plugin-react-helmet": "^3.1.16",
-    "gatsby-plugin-sharp": "^2.3.5",
-    "gatsby-remark-images": "^3.3.25",
-    "gatsby-remark-relative-images": "^0.2.3",
-    "gatsby-remark-static-images": "^1.0.1",
-    "gatsby-source-filesystem": "^2.1.40",
-    "gatsby-transformer-sharp": "^2.5.13",
-    "intersection-observer": "^0.7.0",
-    "postcss-preset-env": "^6.7.0",
-    "prettier-eslint-cli": "^5.0.0",
-    "prop-types": "^15.7.2",
+    "gatsby-plugin-mdx": "^1.2.34",
+    "gatsby-source-filesystem": "^2.3.24",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-fetch-hook": "^1.7.2",
-    "react-helmet": "^5.2.1",
-    "shallow-compare": "^1.2.2",
-    "toml": "^3.0.0"
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.3",
-    "babel-loader": "^8.0.6",
     "env-cmd": "^10.0.1",
     "eslint": "^7.3.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "gatsby-plugin-root-import": "^2.0.5",
-    "install": "^0.13.0",
-    "npm": "^6.14.7",
-    "prettier": "1.19.1",
-    "to-markdown-cli": "^0.4.1"
+    "prettier-eslint-cli": "^5.0.0",
+    "prop-types": "^15.7.2"
   },
   "keywords": [
     "gatsby"
@@ -55,7 +31,7 @@
     "build": "gatsby build",
     "develop": "env-cmd -f .env gatsby develop -H 0.0.0.0",
     "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-    "start": "npm run develop",
+    "start": "pnpm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
