from pnpm to yarn

--- a/site/package.json
+++ b/site/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "laboratoire-subatech",
+  "name": "site",
   "private": true,
   "description": "Site web pour le laboratoire Subatech, Nantes, France",
   "version": "0.1.0",
