--- a/site/package.json
+++ b/site/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^2.24.47",
     "gatsby-plugin-mdx": "^1.2.34",
     "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-theme-nav": "*",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -36,6 +37,7 @@
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
+
   "repository": {
     "type": "git",
     "url": "https://github.com/aphecetche/gatsby-subatest"
