--- a/gatsby-theme-mui/package.json
+++ b/gatsby-theme-mui/package.json
@@ -1,14 +1,28 @@
 {
   "name": "gatsby-theme-mui",
+  "private": true,
   "version": "0.1.0",
   "description": "Visual Theming for Gatsuba",
   "main": "gatsby-config.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "gatsby build",
+    "clean": "gatsby clean",
+    "develop": "gatsby develop"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@material-ui/core": "^4.11.0"
+    "@material-ui/core": "^4.11.0",
+    "gatsby-theme-material-ui": "^1.0.13"
+  },
+  "peerDependencies": {
+    "gatsby": "^2.24.47",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "gatsby": "^2.24.47",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   }
 }
