--- a/gatsby-theme-nav/package.json
+++ b/gatsby-theme-nav/package.json
@@ -6,15 +6,15 @@
   "private": true,
   "devDependencies": {
     "gatsby": "^2.24.47",
+    "gatsby-theme-mui": "*",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "gatsby-theme-mui": "*"
+    "react-dom": "^16.13.1"
   },
   "peerDependencies": {
     "gatsby": "^2.24.47",
+    "gatsby-theme-mui": "*",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "gatsby-theme-mui": "*"
+    "react-dom": "^16.13.1"
   },
   "scripts": {
     "build": "gatsby build",
@@ -22,6 +22,7 @@
     "develop": "gatsby develop"
   },
   "dependencies": {
+    "@material-ui/icons": "^4.9.1",
     "gatsby-source-filesystem": "^2.3.24"
   }
 }
