--- a/site/package.json
+++ b/site/package.json
@@ -22,7 +22,11 @@
     "eslint-plugin-react": "^7.20.0",
     "gatsby-plugin-root-import": "^2.0.5",
     "prettier-eslint-cli": "^5.0.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "gatsby-theme-mui": "*"
+  },
+  "peerDependencies":{
+    "gatsby-theme-mui": "*"
   },
   "keywords": [
     "gatsby"
