Some fixes for the navigation. TODO: animate the bigmenu open/close

--- a/gatsby-theme-nav/package.json
+++ b/gatsby-theme-nav/package.json
@@ -5,8 +5,12 @@
   "license": "MIT",
   "private": true,
   "devDependencies": {
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "gatsby": "^2.24.47",
     "gatsby-theme-mui": "*",
+    "prettier": "^2.1.0",
+    "prettier-eslint-cli": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
