--- a/gatsby-theme-mui/package.json
+++ b/gatsby-theme-mui/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "gatsby-plugin-webfonts": "^1.1.3",
     "gatsby-theme-material-ui": "^1.0.13"
   },
   "peerDependencies": {
