WIP : coming back to the right side menu issue
We must now bite the bullet and admit we have to make a special kind of
"menu" data...

- create a source plugin that reads all menu*.yml files (that have a
menu: true in the frontmatter ?)
- converts them into nodes of type "Menu".
- hen from the recherche layout once should use the Menu corresponding to
the article being displayed.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
         "workspaces":[
                 "site",
                 "gatsby-theme-mui",
-                "gatsby-theme-nav"
+                "gatsby-theme-nav",
+                "gatsby-theme-asides"
         ]
 }
 
