--- a/site/package.json
+++ b/site/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-mdx": "^1.2.34",
     "gatsby-source-filesystem": "^2.3.24",
     "gatsby-theme-nav": "*",
+    "gatsby-theme-asides": "*",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
