--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
         "private": true,
         "workspaces":[
-                "gatsby-theme-mui",
-                "gatsby-theme-mdx",
-                "gatsby-theme-nav",
-                "gatsby-theme-asides",
+                "themes/**",
                 "site"
         ]
 }
