--- a/themes/gatsby-theme-asides/package.json
+++ b/themes/gatsby-theme-asides/package.json
@@ -4,6 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "private": true,
+  "dependencies": {
+    "gatsby-theme-mui": "*",
+    "gatsby-theme-mdx": "*"
+  },
   "devDependencies": {
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
