--- a/themes/gatsby-theme-mdx/package.json
+++ b/themes/gatsby-theme-mdx/package.json
@@ -27,12 +27,14 @@
     "@material-ui/icons": "^4.9.1",
     "@mdx-js/mdx": "^1.6.16",
     "@mdx-js/react": "^1.6.16",
+    "gatsby-image": "^2.4.16",
     "gatsby-plugin-mdx": "^1.2.36",
-    "gatsby-plugin-sharp": "^2.6.29",
+    "gatsby-plugin-sharp": "^2.6.31",
     "gatsby-remark-copy-linked-files": "^2.3.12",
     "gatsby-remark-embed-video": "^3.0.10",
     "gatsby-remark-images": "^3.3.27",
     "gatsby-remark-responsive-iframe": "^2.4.12",
-    "gatsby-source-filesystem": "^2.3.24"
+    "gatsby-source-filesystem": "^2.3.24",
+    "gatsby-transformer-sharp": "^2.5.14"
   }
 }
