--- a/site/package.json
+++ b/site/package.json
@@ -5,12 +5,13 @@
   "version": "0.1.0",
   "author": "Laurent Aphecetche",
   "dependencies": {
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "gatsby": "^2.24.47",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-theme-asides": "*",
+    "gatsby-theme-ldap": "*",
     "gatsby-theme-mdx": "*",
     "gatsby-theme-nav": "*",
-    "gatsby-theme-ldap": "*",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -21,8 +22,8 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "gatsby-plugin-root-import": "^2.0.5",
-    "gatsby-theme-mui": "*",
     "gatsby-theme-ldap": "*",
+    "gatsby-theme-mui": "*",
     "prettier-eslint-cli": "^5.0.0",
     "prop-types": "^15.7.2"
   },
