Playing with alternate home page using drawings from Richard

--- a/site/package.json
+++ b/site/package.json
@@ -9,12 +9,15 @@
     "gatsby": "^2.24.47",
     "gatsby-plugin-meta-redirect": "^1.1.1",
     "gatsby-plugin-netlify": "^2.3.15",
+    "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-remark-relative-images": "^2.0.2",
     "gatsby-theme-intl": "*",
     "gatsby-theme-ldap": "*",
     "gatsby-theme-mdx": "*",
     "gatsby-theme-mui": "*",
     "gatsby-theme-nav": "*",
+    "install": "^0.13.0",
+    "npm": "^6.14.8",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
