--- a/site/package.json
+++ b/site/package.json
@@ -19,7 +19,8 @@
     "install": "^0.13.0",
     "npm": "^6.14.8",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "svgo": "^1.3.2"
   },
   "devDependencies": {
     "env-cmd": "^10.0.1",
