--- a/themes/gatsby-theme-ldap/package.json
+++ b/themes/gatsby-theme-ldap/package.json
@@ -4,9 +4,6 @@
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -26,6 +23,8 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "yarn run eslint \"./**/*.js\" --fix",
     "develop": "gatsby develop"
   }
 }
