Fix linting errors for gatsby-theme-mdx

--- a/themes/gatsby-theme-mdx/package.json
+++ b/themes/gatsby-theme-mdx/package.json
@@ -21,7 +21,8 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "develop": "gatsby develop"
+    "develop": "gatsby develop",
+    "lint": "yarn run eslint \"./**/*.js\" --fix"
   },
   "dependencies": {
     "@material-ui/icons": "^4.9.1",
