--- a/themes/gatsby-theme-mui/package.json
+++ b/themes/gatsby-theme-mui/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "gatsby build",
     "clean": "gatsby clean",
-    "develop": "gatsby develop"
+    "develop": "gatsby develop",
+    "lint": "yarn run eslint \"./**/*.js\" --fix"
   },
   "author": "",
   "license": "ISC",
