--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
         "private": true,
-        "workspaces":[
+        "workspaces": [
                 "themes/**",
                 "site"
-        ]
+        ],
+        "devDependencies": {
+                "husky": "^4.3.4",
+                "lint-staged": "^10.5.3"
+        },
+        "scripts": {
+                "lint": "yarn workspaces run lint"
+        },
+        "husky": {
+                "hooks": {
+                        "pre-commit": "lint-staged"
+                }
+        },
+        "lint-staged": {
+                "*.{js,jsx}": "yarn run lint"
+        }
 }
-
