--- a/site/package.json
+++ b/site/package.json
@@ -15,6 +15,7 @@
     "gatsby-theme-mdx": "*",
     "gatsby-theme-mui": "*",
     "gatsby-theme-nav": "*",
+    "gatsby-theme-seminar": "*",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
