--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
                 }
         },
         "lint-staged": {
-                "*.{js,jsx}": "yarn run lint"
+                "*.{js,jsx}": "eslint . --fix"
         }
 }
