WIP - test-gatsby-theme-mdx is now working
TODO:

- use article type everywhere in site
- update gatsby-theme-seminar to add a seminar type, like the article
  type but tailored for seminars
- ensure that if the gatsby-theme-seminar is not in the configuration
  the site can be built anyway ?

--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
                 }
         },
         "lint-staged": {
-                "*.{js,jsx}": "eslint . --fix"
+                "*.{js,jsx}": "yarn run lint"
         }
 }
