--- a/themes/gatsby-theme-seminar/package.json
+++ b/themes/gatsby-theme-seminar/package.json
@@ -5,13 +5,11 @@
   "author": "Laurent Aphecetche",
   "dependencies": {
     "gatsby": "^2.24.47",
-    "gatsby-theme-mdx": "*",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "peerDependencies": {
     "gatsby": "^2.24.47",
-    "gatsby-theme-mdx": "*",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
@@ -32,6 +30,6 @@
     "clean": "gatsby clean",
     "develop": "gatsby develop",
     "test": "jest",
-    "lint": "yarn run eslint \"./**/*.js\" --fix"
+    "lint": "yarn run eslint \"./**/*.js\" \"./**/*.jsx\" --fix"
   }
 }
