--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "devDependencies": {
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
+    "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.4",
@@ -33,7 +34,8 @@
     "prettier": "^2.2.1"
   },
   "scripts": {
-    "lint-disabled": "yarn run prettier \"**/*.{js,jsx,json,yaml,yml}\" --write",
+    "format": "yarn run prettier \"**/*.{js,jsx,json,yaml,yml}\" --write",
+    "lint": "yarn run eslint \"**/*.{js,jsx}\" --fix",
     "start": "yarn workspace site develop",
     "build": "yarn workspace site build"
   }
