--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "site"
   ],
   "husky": {
-    "hooks": {
+    "hookscd ": {
       "pre-commit": "lint-staged"
     }
   },
@@ -24,19 +24,39 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.11.6",
+    "babel-jest": "^26.6.3",
+    "babel-preset-gatsby": "^0.8.0",
+    "core-js": "^3.0.0",
     "eslint": "^7.15.0",
     "eslint-config-prettier": "^7.0.0",
     "eslint-plugin-jest": "^24.1.3",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.21.5",
     "husky": "^4.3.4",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.3",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "prop-types": ">=15",
+    "react-test-renderer": "^16.14.0",
+    "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "gatsby": "^2.28.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0"
   },
   "scripts": {
     "format": "yarn run prettier \"**/*.{js,jsx,json,yaml,yml}\" --write",
     "lint": "yarn run eslint \"**/*.{js,jsx}\" --fix",
     "start": "yarn workspace site develop",
+    "clean": "yarn workspace site clean",
+    "restart": "yarn clean && yarn start",
     "build": "yarn workspace site build"
+  },
+  "engines": {
+    "yarn": "^1.22.10",
+    "node": ">=12.18.1"
   }
 }
