--- a/themes/gatsby-theme-ldap/package.json
+++ b/themes/gatsby-theme-ldap/package.json
@@ -11,13 +11,6 @@
     "react-obfuscate": "^3.6.7"
   },
   "devDependencies": {
-    "gatsby": "^2.24.47",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
-  "peerDependencies": {
-    "gatsby": "^2.24.47",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "gatsby": "^2.28.2"
   }
 }
