--- a/themes/gatsby-theme-mdx/package.json
+++ b/themes/gatsby-theme-mdx/package.json
@@ -4,15 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "private": true,
-  "devDependencies": {
-    "gatsby": "^2.24.47",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
   "peerDependencies": {
-    "gatsby": "^2.24.47",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "gatsby": "^2.28.0"
   },
   "dependencies": {
     "@mdx-js/mdx": "^1.6.16",
