--- a/themes/gatsby-theme-mui/package.json
+++ b/themes/gatsby-theme-mui/package.json
@@ -7,17 +7,13 @@
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
+    "@material-ui/styles": "^4.11.0",
     "gatsby-plugin-webfonts": "^1.1.3",
+    "@material-ui/lab": "4.0.0-alpha.57",
+    "@material-ui/icons": "^4.11.0",
     "gatsby-theme-material-ui": "^1.0.13"
   },
   "peerDependencies": {
-    "gatsby": "^2.24.47",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
-  },
-  "devDependencies": {
-    "gatsby": "^2.24.47",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "gatsby": "^2.28.2"
   }
 }
