--- a/themes/gatsby-theme-search/package.json
+++ b/themes/gatsby-theme-search/package.json
@@ -5,10 +5,11 @@
   "main": "gatsby-config.js",
   "author": "",
   "license": "ISC",
+  "peerDependencies": {
+    "gatsby": "^2.28.2"
+  },
   "dependencies": {
-    "gatsby": "^2.24.47",
     "gatsby-plugin-lunr": "^1.5.2",
-    "react": "^16.13.1",
     "remark": "^12.0.1",
     "strip-markdown": "^3.1.2"
   }
