--- a/themes/gatsby-theme-seminar/package.json
+++ b/themes/gatsby-theme-seminar/package.json
@@ -4,18 +4,7 @@
   "version": "0.1.0",
   "author": "Laurent Aphecetche",
   "dependencies": {
-    "gatsby": "^2.24.47",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
-  },
-  "peerDependencies": {
-    "gatsby": "^2.24.47",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
-  },
-  "devDependencies": {
-    "gatsby-plugin-root-import": "^2.0.5",
-    "prop-types": "^15.7.2"
+    "gatsby": "^2.28.0"
   },
   "license": "MIT"
 }
