--- a/site/package.json
+++ b/site/package.json
@@ -26,10 +26,10 @@
     "directory": "packages/site"
   },
   "scripts": {
-    "develop": "touch .env && env-cmd -f .env gatsby develop -H 0.0.0.0",
-    "start": "gatsby develop",
+    "start": "touch .env && env-cmd -f .env gatsby develop -H 0.0.0.0",
     "build": "gatsby build",
     "clean": "gatsby clean",
+    "restart": "yarn clean && yarn start",
     "serve": "gatsby serve"
   }
 }
