--- a/themes/gatsby-theme-menu/package.json
+++ b/themes/gatsby-theme-menu/package.json
@@ -4,7 +4,8 @@
   "version": "0.1.0",
   "author": "Laurent Aphecetche",
   "dependencies": {
-    "gatsby": "^2.28.0"
+    "gatsby": "^2.28.0",
+    "gatsby-theme-intl": "*"
   },
   "license": "MIT"
 }
