Reconnected most of articles

--- a/site/src/content/recherche/plasma/menu.fr.yaml
+++ b/site/src/content/recherche/plasma/menu.fr.yaml
@@ -1,4 +1,4 @@
-title: "Equipe des gluons"
+title: "Equipe Plasma"
 links:
   Présentation: /recherche/plasma/presentation-groupe-plasma
   Activités de recherche: /recherche/plasma/recherche
@@ -8,4 +8,4 @@ links:
   Présentations de conférences, séminaires et posters: /recherche/plasma/presentations-de-conferences-seminaires-et-posters
   Thèses: /recherche/plasma/theses
   Contact: /recherche/plasma/contacts
-  Liens: /recherche/plasma/liens2
+#  Liens: /recherche/plasma/liens2
